# AI-Portfolio-Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  huggingface_sync.yml  publish.yml
me/: summary.txt
